--- a/app/src/main/res/layout/activity_location_share.xml
+++ b/app/src/main/res/layout/activity_location_share.xml
@@ -47,7 +47,6 @@
                     android:src="@drawable/menu"
                     android:layout_marginEnd="16dp"/>
             </LinearLayout>
-
         </androidx.appcompat.widget.Toolbar>
 
         <androidx.cardview.widget.CardView
@@ -62,21 +61,20 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
 
-            <androidx.fragment.app.FragmentContainerView
-                android:id="@+id/map_fragment_location"
-                android:name="com.naver.maps.map.MapFragment"
+            <FrameLayout
+                android:id="@+id/map_container_share"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
         </androidx.cardview.widget.CardView>
 
         <androidx.appcompat.widget.SwitchCompat
-            android:id="@+id/switch_location_share"
+            android:id="@+id/switch_share"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="24dp"
-            android:checked="true"
+            android:checked="false"
             app:thumbTint="#FFFFFF"
             app:trackTint="#4CAF50"
             app:layout_constraintTop_toBottomOf="@id/card_map_container"
@@ -91,9 +89,9 @@
             android:textStyle="bold"
             android:textColor="#000000"
             android:layout_marginEnd="10dp"
-            app:layout_constraintEnd_toStartOf="@id/switch_location_share"
-            app:layout_constraintTop_toTopOf="@id/switch_location_share"
-            app:layout_constraintBottom_toBottomOf="@id/switch_location_share"/>
+            app:layout_constraintEnd_toStartOf="@id/switch_share"
+            app:layout_constraintTop_toTopOf="@id/switch_share"
+            app:layout_constraintBottom_toBottomOf="@id/switch_share"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_location_users"
@@ -103,9 +101,7 @@
             android:paddingHorizontal="24dp"
             app:layout_constraintTop_toBottomOf="@id/tv_share_label"
             app:layout_constraintBottom_toBottomOf="parent"
-            tools:listitem="@layout/location_user"/>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            tools:listitem="@layout/location_user"/> </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navigation_view"
