--- a/app/src/main/res/layout/activity_route_detail.xml
+++ b/app/src/main/res/layout/activity_route_detail.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_layout"  android:layout_width="match_parent"
+    android:id="@+id/drawer_layout"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -32,14 +33,12 @@
                 android:layout_gravity="end"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
-
                 <ImageView
                     android:id="@+id/btn_notification"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
                     android:src="@drawable/bell"
                     android:layout_marginEnd="16dp"/>
-
                 <ImageView
                     android:id="@+id/btn_menu"
                     android:layout_width="24dp"
@@ -82,8 +81,9 @@
                 android:paddingHorizontal="16dp"
                 android:paddingVertical="6dp"
                 android:textSize="14sp"
-                android:layout_height="30dp"
-                android:layout_width="100dp"/>
+                android:gravity="center"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"/>
 
             <View
                 android:layout_width="20dp"
@@ -97,18 +97,16 @@
                 android:textSize="18sp"
                 android:textStyle="bold"
                 android:textColor="#000000"
-                android:layout_height="100px"
-                android:layout_width="100px"
-                />
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"/>
         </LinearLayout>
 
-        <LinearLayout
+        <FrameLayout
             android:id="@+id/map_container_detail"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginVertical="24dp"
             android:layout_marginHorizontal="16dp"
-            android:orientation="vertical"
             app:layout_constraintTop_toBottomOf="@id/layout_taxi_summary"
             app:layout_constraintBottom_toTopOf="@id/tv_detail_distance" />
 
@@ -145,5 +143,4 @@
         android:layout_gravity="end"
         android:background="#FFFFFF"
         app:headerLayout="@layout/nav_header" />
-
 </androidx.drawerlayout.widget.DrawerLayout>
