--- a/app/src/main/res/layout/activity_route_main.xml
+++ b/app/src/main/res/layout/activity_route_main.xml
@@ -2,7 +2,6 @@
 <androidx.drawerlayout.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -33,14 +32,12 @@
                 android:layout_gravity="end"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
-
                 <ImageView
                     android:id="@+id/btn_notification"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
                     android:src="@drawable/bell"
                     android:layout_marginEnd="16dp"/>
-
                 <ImageView
                     android:id="@+id/btn_menu"
                     android:layout_width="24dp"
@@ -50,11 +47,10 @@
             </LinearLayout>
         </androidx.appcompat.widget.Toolbar>
 
-        <LinearLayout
+        <FrameLayout
             android:id="@+id/map_container"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:orientation="vertical"
             app:layout_constraintTop_toBottomOf="@id/toolbar_route_main"
             app:layout_constraintBottom_toTopOf="@id/card_route_info" />
 
@@ -86,7 +82,7 @@
                     android:id="@+id/tv_route_end"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="도착지 - 서울 구로구 안양천로 537다길"
+                    android:text="도착지 - 서울 구로구 안양천로"
                     android:textSize="16sp"
                     android:textColor="#000000"
                     android:layout_marginBottom="24dp"/>
@@ -95,7 +91,7 @@
                     android:id="@+id/btn_route_summary"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="고척스카이돔 ➔ 안양천로 537다길"
+                    android:text="고척스카이돔 ➔ 안양천로"
                     android:gravity="center"
                     android:padding="12dp"
                     android:textStyle="bold"
@@ -139,7 +135,7 @@
                         android:gravity="center"
                         android:orientation="vertical">
                         <TextView
-                            android:text="버스/지하철"
+                            android:text="대중교통"
                             android:background="#F08080"
                             android:textColor="#FFFFFF"
                             android:paddingHorizontal="16dp"
@@ -164,7 +160,8 @@
                         android:gravity="center"
                         android:orientation="vertical"
                         android:clickable="true"
-                        android:focusable="true">
+                        android:focusable="true"
+                        android:background="?attr/selectableItemBackground">
                         <TextView
                             android:text="택시"
                             android:background="#F08080"
@@ -194,5 +191,4 @@
         android:layout_gravity="end"
         android:background="#FFFFFF"
         app:headerLayout="@layout/nav_header" />
-
 </androidx.drawerlayout.widget.DrawerLayout>
